front-and_camp_day2

--- a/html/fundamentals/index.html
+++ b/html/fundamentals/index.html
@@ -14,11 +14,15 @@
     <h6>Examples related to all topics</h6> -->
 
     <h1>The Code Magazine</h1>
+    <h2>The Basic Language of the Web: HTML</h2>
+    <img src="../images/slmnclskn.jpg" alt="selman çalışkan" width="64 px">
     <p>
       Posted by <strong>Selman Çalışkan</strong> on Tuesday, January 21st 2025
     </p>
+    
+    <img src="../images/html-coding.jpg" alt="html coding" width="600 px">
 
-    <h2>The Basic Language of the Web: HTML</h2>
+    
     <p>
       All modern websites and web applications are built using three
       <em>fundamental</em>
@@ -43,6 +47,23 @@
       paragraph, links, headings, images, video, etc. Web browsers understand
       HTML and render HTML code as websites.
     </p>
+    <p>In HTML, each elements is made up of 3 parts:
+      <ol>
+        <li>The opening tag</li>
+        <li>The closing tag</li>
+        <li>The actual elements</li>
+    </ol>
+    <p>You can learn more at the <a href="#">MDN Web Docs.</a></p>
+    </p>
     <h3>Why should you learn HTML?</h3>
+    <p>There are countless reasons for learning the fundamental language of the web. Here are 5 of them:</p>
+    <ul>
+      <li>To be able to use fundamental web dev language</li>
+      <li>To hand-craft beautiful websites instead of relying on tools like Wordpress or Wix</li>
+      <li>To build web applications</li>
+      <li>To impress friends</li>
+      <li>To have fun &#128512;</li>
+    </ul>
+    <p>Hopefully you learned something new here. See you next time!</p>
   </body>
 </html>
