--- a/html/fundamentals/index.html
+++ b/html/fundamentals/index.html
@@ -13,57 +13,133 @@
     <h5>Examples related to all topics</h5>
     <h6>Examples related to all topics</h6> -->
 
-    <h1>The Code Magazine</h1>
-    <h2>The Basic Language of the Web: HTML</h2>
-    <img src="../images/slmnclskn.jpg" alt="selman çalışkan" width="64 px">
-    <p>
-      Posted by <strong>Selman Çalışkan</strong> on Tuesday, January 21st 2025
-    </p>
-    
-    <img src="../images/html-coding.jpg" alt="html coding" width="600 px">
+    <header>
+      <h1>The Code Magazine</h1>
+      <nav>
+        <a href="blog.html">Blog</a>
+        <a href="challenges.html">Challenges</a>
+        <a href="#">Flexbox</a>
+        <a href="#">CSS Grid</a>
+      </nav>
+    </header>
 
-    
-    <p>
-      All modern websites and web applications are built using three
-      <em>fundamental</em>
-      technologies: HTML, CSS and JavaScript. These are the languages of the
-      web.
-    </p>
+    <article>
+      <header>
+        <h2>The Basic Language of the Web: HTML</h2>
 
-    <p>
-      In this post, let's focus on HTML. We will learn what HTML is all about,
-      and why you too should learn it.
-    </p>
+        <img
+          src="../images/slmnclskn.jpg"
+          alt="selman çalışkan"
+          width="64 px"
+        />
+        <p>
+          Posted by <strong>Selman Çalışkan</strong> on Tuesday, January 21st
+          2025
+        </p>
 
-    <h3>What is HTML?</h3>
-    <p>
-      HTML stands for <strong>H</strong>yper<strong>T</strong>ext
-      <strong>M</strong>arkup <strong>L</strong>anguage. It's a markup language
-      that web developers use to structure and describe the content of webpage
-      (not a programming language)
-    </p>
-    <p>
-      HTML consists of elements that describe different types of content:
-      paragraph, links, headings, images, video, etc. Web browsers understand
-      HTML and render HTML code as websites.
-    </p>
-    <p>In HTML, each elements is made up of 3 parts:
+        <img src="../images/html-coding.jpg" alt="html coding" width="600 px" />
+      </header>
+
+      <p>
+        All modern websites and web applications are built using three
+        <em>fundamental</em>
+        technologies: HTML, CSS and JavaScript. These are the languages of the
+        web.
+      </p>
+
+      <p>
+        In this post, let's focus on HTML. We will learn what HTML is all about,
+        and why you too should learn it.
+      </p>
+
+      <h3>What is HTML?</h3>
+
+      <p>
+        HTML stands for <strong>H</strong>yper<strong>T</strong>ext
+        <strong>M</strong>arkup <strong>L</strong>anguage. It's a markup
+        language that web developers use to structure and describe the content
+        of webpage (not a programming language)
+      </p>
+
+      <p>
+        HTML consists of elements that describe different types of content:
+        paragraph, links, headings, images, video, etc. Web browsers understand
+        HTML and render HTML code as websites.
+      </p>
+
+      <p>In HTML, each elements is made up of 3 parts:</p>
+
       <ol>
         <li>The opening tag</li>
         <li>The closing tag</li>
         <li>The actual elements</li>
-    </ol>
-    <p>You can learn more at the <a href="#">MDN Web Docs.</a></p>
-    </p>
-    <h3>Why should you learn HTML?</h3>
-    <p>There are countless reasons for learning the fundamental language of the web. Here are 5 of them:</p>
-    <ul>
-      <li>To be able to use fundamental web dev language</li>
-      <li>To hand-craft beautiful websites instead of relying on tools like Wordpress or Wix</li>
-      <li>To build web applications</li>
-      <li>To impress friends</li>
-      <li>To have fun &#128512;</li>
-    </ul>
-    <p>Hopefully you learned something new here. See you next time!</p>
+      </ol>
+
+      <p>
+        You can learn more at the
+        <a href="https://developer.mozilla.org/en-US/" target="_blank"
+          >MDN Web Docs.</a
+        >
+      </p>
+
+      <h3>Why should you learn HTML?</h3>
+
+      <p>
+        There are countless reasons for learning the fundamental language of the
+        web. Here are 5 of them:
+      </p>
+
+      <ul>
+        <li>To be able to use fundamental web dev language</li>
+        <li>
+          To hand-craft beautiful websites instead of relying on tools like
+          Wordpress or Wix
+        </li>
+        <li>To build web applications</li>
+        <li>To impress friends</li>
+        <li>To have fun &#128512;</li>
+      </ul>
+
+      <p>Hopefully you learned something new here. See you next time!</p>
+    </article>
+
+    <aside>
+      <h4>Related posts</h4>
+
+      <ul>
+        <li>
+          <img
+            src="../images/computer-programmer.jpg"
+            alt="How to Learn Web Development"
+            width="64px"
+            height="64px"
+          />
+          <a href="#">How to Learn Web Development</a>
+          <p>By Jonas Schmedtmann</p>
+        </li>
+        <li>
+          <img
+            src="../images/css-power.jpg"
+            alt="The Unknown Powers of CSS"
+            width="64px"
+            height="64px"
+          />
+          <a href="#">The Unknown Powers of CSS</a>
+          <p>By Jim Dillon</p>
+        </li>
+        <li>
+          <img
+            src="../images/introduction-to-javascript.jpg"
+            alt="Why JavaScript is Awesome"
+            width="64px"
+            height="64px"
+          />
+          <a href="#">Why JavaScript is Awesome</a>
+          <p>By Matilda</p>
+        </li>
+      </ul>
+    </aside>
+
+    <footer>Copyright &copy; 2025 by The Code Magazine.</footer>
   </body>
 </html>
