--- a/css/fundamentals/index.html
+++ b/css/fundamentals/index.html
@@ -14,7 +14,7 @@
     <h5>Examples related to all topics</h5>
     <h6>Examples related to all topics</h6> -->
 
-    <header>
+    <header class="main-header">
       <h1>The Code Magazine</h1>
       <nav>
         <a href="blog.html">Blog</a>
@@ -33,7 +33,7 @@
           alt="selman çalışkan"
           width="64 px"
         />
-        <p>
+        <p id="author">
           Posted by <strong>Selman Çalışkan</strong> on Tuesday, January 21st
           2025
         </p>
@@ -107,7 +107,7 @@
     <aside>
       <h4>Related posts</h4>
 
-      <ul>
+      <ul class="related">
         <li>
           <img
             src="../images/computer-programmer.jpg"
@@ -116,7 +116,7 @@
             height="64px"
           />
           <a href="#">How to Learn Web Development</a>
-          <p>By Jonas Schmedtmann</p>
+          <p class="related-author">By Jonas Schmedtmann</p>
         </li>
         <li>
           <img
@@ -126,7 +126,7 @@
             height="64px"
           />
           <a href="#">The Unknown Powers of CSS</a>
-          <p>By Jim Dillon</p>
+          <p class="related-author">By Jim Dillon</p>
         </li>
         <li>
           <img
@@ -136,11 +136,13 @@
             height="64px"
           />
           <a href="#">Why JavaScript is Awesome</a>
-          <p>By Matilda</p>
+          <p class="related-author">By Matilda</p>
         </li>
       </ul>
     </aside>
 
-    <footer>Copyright &copy; 2025 by The Code Magazine.</footer>
+    <footer>
+      <p id="copyright">Copyright &copy; 2025 by The Code Magazine.</p>
+    </footer>
   </body>
 </html>
