--- a/javascript/fundamentals/part-I/index.html
+++ b/javascript/fundamentals/part-I/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>JavaScript Fundamentals – Part 1</title>
+    <title>JavaScript Fundamentals - Part I</title>
 
     <style>
       body {
@@ -25,7 +25,7 @@
     </style>
   </head>
   <body>
-    <h1>JavaScript Fundamentals – Part 1</h1>
+    <h1>JavaScript Fundamentals - Part I</h1>
 
     <script src="script.js"></script>
   </body>
