fe_camp-commit_5

--- a/css/fundamentals/challenges.html
+++ b/css/fundamentals/challenges.html
@@ -12,7 +12,7 @@
         <ul>
           <li><a href="challenge-1.html">CHALLENGE#1</a></li>
           <br />
-          <li><a href="#">Soon Here...</a></li>
+          <li><a href="challenge-2.html">CHALLENGE#2</a></li>
           <br />
           <li><a href="#">Soon Here...</a></li>
           <br />
