fe_camp-commit_8

--- a/css/fundamentals/index.html
+++ b/css/fundamentals/index.html
@@ -45,6 +45,7 @@
             alt="html coding"
             width="600 px"
           />
+          <button>❤️ Like</button>
         </header>
 
         <p>
