--- a/css/fundamentals/challenges.html
+++ b/css/fundamentals/challenges.html
@@ -14,7 +14,7 @@
           <br />
           <li><a href="challenge-2.html">CHALLENGE#2</a></li>
           <br />
-          <li><a href="#">Soon Here...</a></li>
+          <li><a href="challenge-3.html">CHALLENGE#3</a></li>
           <br />
           <li><a href="#">Soon Here...</a></li>
           <br />
