--- a/css/floats/index.html
+++ b/css/floats/index.html
@@ -15,7 +15,7 @@
     <h6>Examples related to all topics</h6> -->
 
     <div class="container">
-      <header class="main-header">
+      <header class="main-header clearfix">
         <h1>📘 The Code Magazine</h1>
         <nav>
           <a href="blog.html">Blog</a>
